--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 .wht{
 	color: #fff;
 }
+body{
+	background-image: url("./img/body1.jpg");
+	/*background-repeat: no-repea*/
+	width: 100%;
+	height:100%;
+}
 .bgrn{
 	background-image: url("./img/log.jpg");
 	background-repeat: no-repeat;
@@ -16,16 +22,22 @@
     box-shadow: 0px 3px 55px 5px rgba(0,0,0,0.75);
 }
 .1{
-	align-content: center;
+	padding-left: 30px;
+	padding-right: 30px;	
 }
 .logo{
 	/*margin-top:px;*/
-	height: 65px;
-	width: 170px;
+	height: 50px;
+	width: 150px;
+}
+.mod{
+	
+	background-color: darkgrey;
 }
 .button{
-	margin-left: 30px;
-}
-.hdr{
 	margin-right: 10px;
 }
+.pos{
+	padding-left: 70px;  
+	}
+
