--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	color: #fff;
 }
 body{
-	background-color: grey; 
+	background-color: 	#D3D3D3; 
 	/*opacity: 0.5;*/
 	width: 100%;
 	height:100vh;
@@ -50,7 +50,55 @@ body{
 		width: 50px;	
 	}
 } 
-#slider{
-	
+
+.slider{
+
+	width: 600px;
+	height: 400px;
+	margin: 0 auto;
+	overflow: hidden;
+}
+.slides{
+	display: block;
+	width: 8000px;
+	height: 400px;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.slide{
+	margin-top: 30px; 
+	float: left;
+	height: 400px;
+	width: 900px;
 }
 
+.popular{
+	/*border: 1px solid;*/
+	border-color: #fff;
+	background-color: #D3D3D3;
+	height: 45px;
+	width: 100%;
+}
+.pop1{
+	border: 1px solid;
+	border-color: #fff;
+	text-align: center;
+	padding-top: 8px;
+	margin-bottom: 1px;
+	width: 200px;
+	height: 43px;
+	background-color: #D3D3D3; 
+}
+
+.pop2{
+	color: #fff;
+	text-align: center;
+	width: 150px;
+	height: 30px;
+	background-color: #D3D3D3;
+	border:1px solid;
+	border-radius: 10px;
+	border-color: #fff;
+
+}
